tests/errors/test_10.x
// Attempt to reference a scalar as a function

fn main() -> void {

    let x: i64 = 21;
    let y: i64 = x();

}